styles/hookah.css
.handler
{
   position: absolute;
   top: 0;
   left: 0;
}

.besties-handler
{
    margin-top: 81px;
}

.article-container
{
    background-color: #151515;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 72px;
    margin-bottom: 12px;
}

.right-arrow-container
{
    margin-right: 150px;
}

.left-arrow-container
{
    margin-left: 150px;
}

.article-handler
{
    font-family: 'Roboto-Light';
    font-style: normal;
    font-weight: 300;
    font-size: 36px;
    line-height: 42px;
    letter-spacing: 0.04em;
    color: #FFFFFF;
    text-shadow: 0px 4px 4px #6E9F57;
    margin-inline: 138px;
}

.container {
    position: relative; /* Позиционирование контейнера для вложенных элементов */
}

.area {
    position: absolute; /* Абсолютное позиционирование */
    top: 50%; /* Положение сверху на 50% от верхней границы родительского контейнера */
    left: 50%; /* Положение слева на 50% от левой границы родительского контейнера */
    transform: translate(-50%, -50%); /* Перемещение контейнера обратно на 50% его ширины и высоты */
    width: 100%; /* Ширина 100% от родительского контейнера */
    height: 100%; /* Высота 100% от родительского контейнера */
    z-index: -1; /* Установка z-index, чтобы задний фон оставался позади */
}

.pen {
    max-width: 635px;
    width: 100%;
    margin: 50px auto 0;
    opacity: 0;
    position: relative;
    -webkit-transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -ms-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;
    -webkit-animation: 1s appear 1 forwards;
    -moz-animation: 1s appear 1 forwards;
    -o-animation: 1s appear 1 forwards;
    animation: 1s appear 1 forwards;
}

.stage {
    max-width: 635px;
    width: 100%;
    height: 400px;
    -webkit-transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -ms-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;
}

.element {
    background: green;
    margin-bottom: 36px;
    width: 202px;
    transform-origin: 50% 50%;
    height: inherit;
    margin: 0 7px 0 0;
    display: inline-block;
    -webkit-transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -ms-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    -o-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
}

.element.active {
    width: 282px;
    opacity: 1;
}

.element.inactive {
    width: 162px;
    opacity: 0.4;
}

.element.orange {
    background: url('../assets/hookas/-Orange-hookah.svg') 45% 0 no-repeat;
    border-radius: 20px;
    background-size: cover;
}

.element.pomegranate {
    background: url('../assets/hookas/-Pomegranate-hookah.svg') 45% 0 no-repeat;
    border-radius: 20px;
    background-size: cover;
}

.element.sea-buckthorn {
    background: url('../assets/hookas/-Sea-buckthorn-hookah.svg') 45% 0 no-repeat;
    border-radius: 20px;
    background-size: cover;
}

.element:last-of-type {
    margin: 0;
}

@media all and (max-width: 1070px) {

    .article-container
    {
        background-color: #151515;
        position: relative;
        z-index: 10;
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        margin-bottom: 36px;
    }

    .right-arrow-container
    {
        margin-right: auto;
    }

    .left-arrow-container
    {
        margin-left: auto;
    }

    .article-handler
    {
        font-family: 'Roboto-Light';
        font-style: normal;
        font-weight: 300;
        font-size: 36px;
        line-height: 42px;
        letter-spacing: 0.04em;
        color: #FFFFFF;
        text-shadow: 0px 4px 4px #6E9F57;
    }
}

@media all and (min-width: 900px) {

    .article-handler
    {
        font-family: 'Roboto-Light';
        font-style: normal;
        font-weight: 300;
        font-size: 36px;
        line-height: 42px;
        letter-spacing: 0.04em;
        color: #FFFFFF;
        text-shadow: 0px 4px 4px #6E9F57;
        margin-inline: 35px;
    }

    .right-arrow-container
    {
        margin-right: auto;
    }

    .left-arrow-container
    {
        margin-left: auto;
    }

    .article-handler
    {
        font-family: 'Roboto-Light';
        font-style: normal;
        font-weight: 300;
        font-size: 36px;
        line-height: 42px;
        letter-spacing: 0.04em;
        color: #FFFFFF;
        text-shadow: 0px 4px 4px #6E9F57;
        margin-inline: 138px;
    }

    .area{
        max-width: 890px;
    }

    .pen {
        max-width: 890px;
    }

    .element {
        width: 286px;
    }

    .element.inactive {
        width: 246px;
    }

    .element.active {
        width: 366px;
    }

    .stage {
        max-width: 890px;
        height: 600px;
    }
}

@media all and (max-width: 660px) {

    .area{
        max-width: 335px;
    }

    .pen {
        max-width: 335px;
    }

    .element {
        width: 101px;
    }

    .element.inactive {
        width: 61px;
    }

    .element.active {
        width: 181px;
    }

    .stage {
        max-width: 335px;
    }
}

@media all and (max-width: 415px) {

    .area
    {
        max-width: 200px;
    }

    .article-container
    {
        justify-content: center;
    }

    .article-handler
    {
        font-size: 24px;
        margin: 0;
    }

    .right-arrow-container
    {
        margin: 0;
    }

    .left-arrow-container
    {
        margin: 0;
    }
}

@-webkit-keyframes appear {
    15% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@-moz-keyframes appear {
    15% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@-o-keyframes appear {
    15% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes appear {
    15% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.circles{
    position: absolute;
    top: 0;
    left: 0;
    width: 90%;
    height: 95%;
    overflow: hidden;
}

.circles li{
    position: absolute;
    display: block;
    list-style: none;
    background: url('../assets/common/logo.png') no-repeat; /* Замените путь на путь к вашему логотипу */
    background-size: contain; /* Это обеспечит масштабирование фона внутри элемента */
    animation: animate 25s linear infinite;
    bottom: -150px; /* Подстраивайте это значение под ваши требования */
}


.circles li:nth-child(1){
    left: 25%;
    width: 80px;
    height: 80px;
    animation-delay: 0s;
}


.circles li:nth-child(2){
    left: 10%;
    width: 20px;
    height: 20px;
    animation-delay: 2s;
    animation-duration: 12s;
}

.circles li:nth-child(3){
    left: 70%;
    width: 20px;
    height: 20px;
    animation-delay: 4s;
}

.circles li:nth-child(4){
    left: 40%;
    width: 60px;
    height: 60px;
    animation-delay: 0s;
    animation-duration: 18s;
}

.circles li:nth-child(5){
    left: 65%;
    width: 20px;
    height: 20px;
    animation-delay: 0s;
}

.circles li:nth-child(6){
    left: 75%;
    width: 110px;
    height: 110px;
    animation-delay: 3s;
}

.circles li:nth-child(7){
    left: 35%;
    width: 150px;
    height: 150px;
    animation-delay: 7s;
}

.circles li:nth-child(8){
    left: 50%;
    width: 25px;
    height: 25px;
    animation-delay: 15s;
    animation-duration: 45s;
}

.circles li:nth-child(9){
    left: 20%;
    width: 15px;
    height: 15px;
    animation-delay: 2s;
    animation-duration: 35s;
}

.circles li:nth-child(10){
    left: 85%;
    width: 150px;
    height: 150px;
    animation-delay: 0s;
    animation-duration: 11s;
}

@keyframes animate {

    0%{
        transform: translateY(0);
        opacity: 1;
        border-radius: 0;
    }

    100%{
        transform: translateY(-1000px) rotate(720deg);
        opacity: 0;
    }

}

.element.loyalty-system {
    background: #000 45% 0 no-repeat;
    border-radius: 20px;
    background-size: cover;
}

.element.standart {
    background: #000 45% 0 no-repeat;
    border-radius: 20px;
    background-size: cover;
}

.element.premium {
    background: #000 45% 0 no-repeat;
    border-radius: 20px;
    background-size: cover;
}

.card-article-container
{
    display: flex;
    justify-content: center;
    font-family: 'Pricedown';
    font-size: 24px;
    margin-top: 36px;
}

.image-container {
    position: relative;
    transition: top 0.5s ease;
    top: 25%;
    width: 100%;
}

.image-container img {
    width: 100%;
    height: auto;
    transition: transform 0.3s ease; /* Плавный переход для анимации смещения изображения */
}

.text-container {
    position: absolute;
    top: 50%;
    font-family: 'Roboto-Light';
    font-weight: 300;
    font-size: 18px;
    bottom: 0;
    width: 100%;
    text-align: center;
    color: white;
    padding: 10px 0;
    transition: opacity 0.15s ease;
    opacity: 0;
}

.element.loyalty-system:hover .image-container,
.element.standart:hover .image-container,
.element.premium:hover .image-container {
    top: 0;
}

.element.loyalty-system:hover .text-container,
.element.standart:hover .text-container,
.element.premium:hover .text-container {
    opacity: 1;
}

